feat: Add basic layout for main site navigation to top header in base.html

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,11 +10,7 @@ body {
     max-width: 1400px;
 }
 
-.top-header {
-    max-height: 100px;
-}
-
-
+.top-header,
 .logo-img {
     max-height: 100px;
 }
