--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -2,13 +2,13 @@
     <ul class="navbar-nav w-auto mx-auto">
 
         <li class="nav-item d-block d-md-hidden">
-            <a class="fw-bold nav-link mr-5" href="{% url 'home' %}" id="home-link">
+            <a class="fw-bold text-black nav-link me-5" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
         </li>
 
         <li class="nav-item dropdown">
-            <a class="fw-bold nav-link dropdown-toggle mr-5" href="#" role="button" id="all-products-link"
+            <a class="fw-bold text-black nav-link me-5" href="#" role="button" id="all-products-link"
                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Products
             </a>
@@ -21,7 +21,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="fw-bold nav-link mr-5 dropdown-toggle" href="#" role="button" id="peripherals-link"
+            <a class="fw-bold text-black nav-link me-5" href="#" role="button" id="peripherals-link"
                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Peripherals
             </a>
@@ -34,7 +34,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="fw-bold nav-link dropdown-toggle mr-5" href="#" role="button" id="monitors-link"
+            <a class="fw-bold text-black nav-link me-5" href="#" role="button" id="monitors-link"
                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Monitors
             </a>
@@ -47,7 +47,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="fw-bold nav-link dropdown-toggle mr-5" href="#" role="button" id="storage-link" 
+            <a class="fw-bold text-black nav-link me-5" href="#" role="button" id="storage-link" 
                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Storage
             </a>
@@ -59,7 +59,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="fw-bold nav-link dropdown-toggle" href="#" role="button" id="deals-link" 
+            <a class="fw-bold text-black nav-link" href="#" role="button" id="deals-link" 
                 data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Deals
             </a>
