feat: Add off-canvas sidebar nav for small screen sizes

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,7 +57,7 @@
                     </a>
                 </div>
                 <div class="search px-1">
-                    <form method="GET" action="">
+                    <form method="get" action="">
                         <div class="input-group border-black nav-item">
                             <button class="input-group-text" type="submit"><i class="fas fa-search"></i></button>
                             <input class="form-control border" type="search" name="q" id=""
@@ -88,7 +88,7 @@
         </div>
         <div class="row">
             <nav class="navbar navbar-expand-md mx-2">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#main-nav"
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
