--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -5,12 +5,12 @@
             <p class="my-0">Search</p>
         </div>
     </a>
-    <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
+    <div class="dropdown-menu border-0 w-100 p-3 my-0" aria-labelledby="mobile-search">
         <form class="form" method="GET" action="">
             <div class="input-group w-100">
                 <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search for products">
                 <div class="input-group-append">
-                    <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
+                    <button class="form-control btn btn-black border border-black rounded-0" type="submit">
                         <span class="icon">
                             <i class="fas fa-search"></i>
                         </span>
@@ -53,7 +53,7 @@
 <li class="list-inline-item">
     <a class="text-black nav-link d-block d-md-none" href="#">
         <div class="text-center me-3">
-            <div><i class="fas fa-shopping-bag"></i></div>
+            <i class="fas fa-shopping-bag"></i>
             <p class="my-0">
                 Bag
             </p>
