--- a/templates/base.html
+++ b/templates/base.html
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="row">
-            <nav class="navbar navbar-expand-md mx-2">
+            <nav class="navbar navbar-expand-md ps-2">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#main-nav"
                     aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -95,6 +95,20 @@
                 {% include 'includes/main-nav.html' %}
                 {% include 'includes/mobile-header.html' %}
             </nav>
+        </div>
+        <div class="row bg-black text-white py-2">
+            <div class="text-center fw-bold col-4">
+                <i class="fa-solid fa-truck fa-lg"></i>
+                <p class="my-0 banner-text">Fast Reliable Service</p>
+            </div>
+            <div class="text-center fw-bold col-4">
+                <i class="fa-solid fa-gift fa-lg"></i>
+                <p class="my-0 banner-text">Free Delivery on Orders Over £100!</p>
+            </div>
+            <div class="text-center fw-bold col-4">
+                <i class="fa-solid fa-desktop fa-lg"></i>
+                <p class="my-0 banner-text">Latest Tech Deals at Great Prices!</p>
+            </div>
         </div>
     </header>
 
