--- a/templates/base.html
+++ b/templates/base.html
@@ -117,11 +117,27 @@
         {% endblock %}
     </div>
 
-    <footer class="container-fluid pt-3">
+    <footer class="container-fluid pt-3 bg-dark text-white">
         <div class="row">
-            <div class="col-md-4 col-sm-12"></div>
-            <div class="col-md-4 col-sm-12"></div>
-            <div class="col-md-4 col-sm-12"></div>
+            <div class="col-md-4 col-sm-12 text-center">
+                <h1 class="text-uppercase fw-bold font-monospace">Stay Connected!</h1>
+                <ul class="list-inline" id="social-icons">
+                    <li class="list-inline-item pe-3"><a href="https://www.facebook.com" target="_blank" aria-label="Open Facebook in a new tab"
+                        rel="noopener"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
+                    <li class="list-inline-item pe-3"><a href="https://www.twitter.com" target="_blank" aria-label="Open Twitter in a new tab"
+                        rel="noopener"><i class="fa-brands fa-twitter fa-xl"></i></a></li>
+                    <li class="list-inline-item pe-3"><a href="https://www.youtube.com" target="_blank" aria-label="Open Youtube in a new tab"
+                        rel="noopener"><i class="fa-brands fa-youtube fa-xl"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank" aria-label="Open Instagram in a new tab"
+                        rel="noopener"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
+                </ul>
+            </div>
+            <div class="col-md-4 col-sm-12">
+
+            </div>
+            <div class="col-md-4 col-sm-12">
+
+            </div>
         </div>
     </footer>
 </body>
