--- a/templates/base.html
+++ b/templates/base.html
@@ -117,26 +117,39 @@
         {% endblock %}
     </div>
 
-    <footer class="container-fluid pt-3 bg-dark text-white">
-        <div class="row">
-            <div class="col-md-4 col-sm-12 text-center">
-                <h1 class="text-uppercase fw-bold font-monospace">Stay Connected!</h1>
-                <ul class="list-inline" id="social-icons">
-                    <li class="list-inline-item pe-3"><a href="https://www.facebook.com" target="_blank" aria-label="Open Facebook in a new tab"
-                        rel="noopener"><i class="fa-brands fa-facebook fa-xl"></i></a></li>
-                    <li class="list-inline-item pe-3"><a href="https://www.twitter.com" target="_blank" aria-label="Open Twitter in a new tab"
-                        rel="noopener"><i class="fa-brands fa-twitter fa-xl"></i></a></li>
-                    <li class="list-inline-item pe-3"><a href="https://www.youtube.com" target="_blank" aria-label="Open Youtube in a new tab"
-                        rel="noopener"><i class="fa-brands fa-youtube fa-xl"></i></a></li>
-                    <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank" aria-label="Open Instagram in a new tab"
-                        rel="noopener"><i class="fa-brands fa-instagram fa-xl"></i></a></li>
-                </ul>
-            </div>
-            <div class="col-md-4 col-sm-12">
-
-            </div>
-            <div class="col-md-4 col-sm-12">
-
+    <footer class="pt-3 bg-dark text-white">
+        <div class="container-fluid" id="footer-container">
+            <div class="row">
+                <div class="col-lg-4 col-md-12 text-center">
+                    <h1 class="text-uppercase fw-bold fs-3 font-monospace">Stay Connected!</h1>
+                    <ul class="list-inline" id="social-icons">
+                        <li class="list-inline-item pe-3"><a href="https://www.facebook.com" target="_blank"
+                                aria-label="Open Facebook in a new tab" rel="noopener"><i
+                                    class="fa-brands fa-facebook fa-xl"></i></a></li>
+                        <li class="list-inline-item pe-3"><a href="https://www.twitter.com" target="_blank"
+                                aria-label="Open Twitter in a new tab" rel="noopener"><i
+                                    class="fa-brands fa-twitter fa-xl"></i></a></li>
+                        <li class="list-inline-item pe-3"><a href="https://www.youtube.com" target="_blank"
+                                aria-label="Open Youtube in a new tab" rel="noopener"><i
+                                    class="fa-brands fa-youtube fa-xl"></i></a></li>
+                        <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank"
+                                aria-label="Open Instagram in a new tab" rel="noopener"><i
+                                    class="fa-brands fa-instagram fa-xl"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-12 text-center" id="site-info-links">
+                    <h1 class="text-uppercase fw-bold fs-3 font-monospace">Information</h1>
+                    <ul class="ps-0 text-white">
+                        <li class=""><a href="#" class="">Account</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Brands</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-md-12 text-center">
+                    <h1 class="text-uppercase fs-3 fw-bold font-monospace">Sign up to our Newsletter!</h2>
+                </div>
             </div>
         </div>
     </footer>
