feat: Add banner image and link on home page and add home.css for home page styles

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,13 +1,12 @@
 body {
     font-family: 'Lato', sans-serif !important;
     background-color: #fff !important;
-    padding-top: 100px;
-    min-height: 100vh;
 }
 
 #content-wrapper {
     background-color: #fff;
     max-width: 1400px;
+    min-height: calc(100vh - 155px);
 }
 
 .top-header,
