--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
+{% load static %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'home/css/home.css' %}">
+{% endblock %}
 
 {% block content %}
-
+<div class="row">
+    <div class="col-12 text-center">
+        <a href="#"><img src="../../../media/home-splash-img.png" class="welcome-img" alt=""></a>
+    </div>
+</div>
 {% endblock %}
