feat: Add home page content template to index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,9 +6,31 @@
 {% endblock %}
 
 {% block content %}
+<!-- Banner image -->
 <div class="row">
     <div class="col-12 text-center">
         <a href="#"><img src="../../../media/home-splash-img.png" class="welcome-img" alt=""></a>
     </div>
 </div>
+<!-- New Products -->
+<div class="row pt-4">
+    <h2 class="fw-bold text-uppercase">New In Store</h2>
+</div>
+<!-- Top Peripherals -->
+<div class="row">
+    <h2 class="fw-bold text-uppercase">Top Peripherals</h2>
+</div>
+<!-- Top Monitors -->
+<div class="row">
+    <h2 class="fw-bold text-uppercase">Top Monitors</h2>
+</div>
+<!-- Top Storage -->
+<div class="row">
+    <h2 class="fw-bold text-uppercase">Top Storage</h2>
+</div>
+<!-- Blog -->
+<div class="row">
+    <h2 class="fw-bold">Check Our Blog</h2>
+</div>
+
 {% endblock %}
