feat: Add profiles app and add comments to base.html and index.html

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,6 +5,10 @@
 <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
 {% endblock %}
 
+{% block extra_title %}
+Welcome!
+{% endblock %}
+
 {% block content %}
 <!-- Banner image -->
 <div class="row">
