--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Lato', sans-serif !important;
-    background-color: #fff !important;
+    background-color: #e0e0e0 !important;
 }
 
 #content-wrapper {
