--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                 <!-- Logo -->
                 <div>
                     <a href="{% url 'home' %}" class="nav-link">
-                        <img src="../media/logo-removebg.png" class="logo-img mx-0" alt="A to PC"
+                        <img src="{% static '../media/logo-removebg.png' %}" class="logo-img mx-0" alt="A to PC"
                             aria-label="Go to home page">
                     </a>
                 </div>
