--- a/templates/base.html
+++ b/templates/base.html
@@ -75,10 +75,20 @@
                                 <p>Wishlist</p>
                             </a>
                         </li>
-                        <li class="list-inline-item">
-                            <a href="#" class="nav-link"><i class="fas fa-user fa-lg"></i>
+                        <li class="list-inline-item dropdown">
+                            <a href="#" class="nav-link" id="user-options" data-bs-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-lg"></i>
                                 <p>Account</p>
                             </a>
+                            <div class="dropdown-menu" aria-labelledby="user-options">
+                                {% if request.user.is_authenticated %}
+                                <a href="#" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a>
+                                {% else %}
+                                <a href="{% url 'account_login' %}" class="dropdown-item">Sign In</a>
+                                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                {% endif %}
+                            </div>
                         </li>
                         <li class="list-inline-item">
                             <a href="#" class="nav-link"><i class="fas fa-shopping-bag fa-lg"></i>
