--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -34,14 +34,11 @@
     </a>
     <ul class="dropdown-menu" aria-labelledby="user-options">
         {% if request.user.is_authenticated %}
-            {% if request.user.is_superuser %}
-                <li><a href="#" class="dropdown-item">Product Management</a></li>
-            {% endif %}
             <li><a href="#" class="dropdown-item">My Profile</a></li>
-            <li><a href="#" class="dropdown-item">Logout</a></li>
+            <li><a href="#" class="dropdown-item">Sign Out</a></li>
         {% else %}
+            <li><a href="#" class="dropdown-item">Sign In</a></li>
             <li><a href="#" class="dropdown-item">Register</a></li>
-            <li><a href="#" class="dropdown-item">Login</a></li>
         {% endif %}
     </ul>
 </li>
