--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,15 +1,27 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+{% block extra_title %}
+Change Password
+{% endblock %}
 
-    <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-    </form>
+{% block content %}
+<div class="text-center">
+    <h1 class="fw-bold">{% trans "Change Password" %}</h1>
+</div>
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <a href="{% url 'home' %}" class="btn btn-dark">Cancel</a>
+            <button type="submit" name="action" class="btn btn-primary">{% trans "Change Password" %}</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
