--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -5,12 +5,19 @@
 
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
+{% block extra_title %}
+Password Reset email sent
+{% endblock %}
+
 {% block content %}
-    <h1>{% trans "Password Reset" %}</h1>
+<div class="text-center">
+    <h1 class="fw-bold">{% trans "Password Reset" %}</h1>
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
     
     <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <a href="{% url 'home' %}" class="btn btn-dark">Back to home</a>
+</div>
 {% endblock %}
