feat: Update sign up and password reset pages to match site styles

--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -3,7 +3,15 @@
 {% load i18n %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
+{% block extra_title %}
+Password changed successfully!
+{% endblock %}
+
 {% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+<div class="text-center">
+    <h1 class="fw-bold">{% trans "Change Password" %}</h1>
+    <p>{% trans 'Success! Your password is now changed.' %}</p>
+    <a href="{% url 'home' %}" class="btn btn-dark">Back to Home</a>
+    <a href="{% url 'account_login' %}" class="btn btn-primary">Go to Sign In</a>
+</div>
 {% endblock %}
