--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -1,5 +1,4 @@
 {% extends "account/base.html" %}
-{% load static %}
 {% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 
@@ -53,7 +52,7 @@ Login
             <a class="button secondaryAction"
               href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
             <p class="text-center pt-2">
-              <button class="btn btn-primary btn-outline-black" type="submit">{% trans "Sign In" %}</button>
+              <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
             </p>
           </form>
         </div>
