--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -1,21 +1,35 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
+{% block extra_title %}
+Sign Up
+{% endblock %}
+
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<div class="text-center">
+  <h1 class="fw-bold">{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+  <p>{% blocktrans %}Welcome to A to PC! Already have an account? Then please <a href="{{ login_url }}">sign
+      in</a>.{% endblocktrans %}</p>
+</div>
+<div class="row justify-content-center">
+  <div class="col-md-6">
+    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+      {% csrf_token %}
+      {{ form|crispy }}
+      {% if redirect_field_value %}
+      <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+      {% endif %}
+      <p class="text-center">
+        <button type="submit" class="btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
+      </p>
+    </form>
+  </div>
+</div>
 
 {% endblock %}
