feat: Update email verification pages and password set pages in allauth templates

--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -18,6 +18,6 @@ Password Reset email sent
     {% endif %}
     
     <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
-    <a href="{% url 'home' %}" class="btn btn-dark">Back to home</a>
+    <a href="{% url 'home' %}" class="btn btn-dark">Home</a>
 </div>
 {% endblock %}
