--- a/templates/allauth/account/account_inactive.html
+++ b/templates/allauth/account/account_inactive.html
@@ -4,8 +4,17 @@
 
 {% block head_title %}{% trans "Account Inactive" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Account Inactive" %}</h1>
+{% block extra_title %}
+Inactive Account
+{% endblock %}
 
-<p>{% trans "This account is inactive." %}</p>
+{% block content %}
+
+<div class="text-center">
+    <h1 class="fw-bold">{% trans "Account Inactive" %}</h1>
+
+    <p>{% trans "This account is inactive." %}</p>
+    <a href="{% url 'home' %}" class="btn btn-dark">Home</a>
+</div>
+
 {% endblock %}
