--- a/templates/allauth/account/email.html
+++ b/templates/allauth/account/email.html
@@ -1,11 +1,18 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Account" %}{% endblock %}
 
+{% block extra_title %}
+Email Addresses
+{% endblock %}
+
 {% block content %}
-    <h1>{% trans "E-mail Addresses" %}</h1>
+<div class="text-center">
+    <h1 class="fw-bold">{% trans "E-mail Addresses" %}</h1>
 {% if user.emailaddress_set.all %}
 <p>{% trans 'The following e-mail addresses are associated with your account:' %}</p>
 
@@ -19,7 +26,7 @@
 
       <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or user.emailaddress_set.count == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
 
-{{ emailaddress.email }}
+<strong>{{ emailaddress.email }} - </strong>
     {% if emailaddress.verified %}
     <span class="verified">{% trans "Verified" %}</span>
     {% else %}
@@ -30,10 +37,10 @@
 </div>
   {% endfor %}
 
-<div class="buttonHolder">
-      <button class="secondaryAction" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <button class="secondaryAction" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-      <button class="primaryAction" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+<div class="buttonHolder pt-3 pb-5">
+      <button class="secondaryAction btn btn-primary" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+      <button class="secondaryAction btn btn-dark" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+      <button class="primaryAction btn btn-danger" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
 </div>
 
 </fieldset>
@@ -43,16 +50,19 @@
 <p><strong>{% trans 'Warning:'%}</strong> {% trans "You currently do not have any e-mail address set up. You should really add an e-mail address so you can receive notifications, reset your password, etc." %}</p>
 
 {% endif %}
+</div>
 
 
-    <h2>{% trans "Add E-mail Address" %}</h2>
-
-    <form method="post" action="{% url 'account_email' %}" class="add_email">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
-    </form>
-
+    <h2 class="fw-bold text-center">{% trans "Add E-mail Address" %}</h2>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form method="post" action="{% url 'account_email' %}" class="add_email">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <button class="btn btn-primary" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+        </form>
+      </div>
+    </div>
 {% endblock %}
 
 
