--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -1,15 +1,27 @@
 {% extends "account/base.html" %}
+{% load crispy_forms_filters %}
+{% load crispy_forms_tags %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+{% block extra_title %}
+Set Password
+{% endblock %}
 
-    <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="action" value="{% trans 'Set Password' %}"/>
-    </form>
+{% block content %}
+
+<h1 class="text-center">{% trans "Set Password" %}</h1>
+
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <input class="btn btn-primary" type="submit" name="action" value="{% trans 'Set Password' %}" />
+        </form>
+    </div>
+</div>
+
 {% endblock %}
