--- a/templates/base.html
+++ b/templates/base.html
@@ -82,6 +82,10 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="user-options">
                                 {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                <a href="{% url 'admin:index' %}" class="dropdown-item">Admin</a>
+                                <a href="#" class="dropdown-item">Product Management</a>
+                                {% endif %}
                                 <a href="#" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a>
                                 {% else %}
