--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
                                 <a href="{% url 'admin:index' %}" class="dropdown-item">Admin</a>
                                 <a href="#" class="dropdown-item">Product Management</a>
                                 {% endif %}
-                                <a href="#" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'profile' user.profile.id %}" class="dropdown-item">My Profile</a>
                                 <a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a>
                                 {% else %}
                                 <a href="{% url 'account_login' %}" class="dropdown-item">Sign In</a>
