--- a/templates/includes/mobile-header.html
+++ b/templates/includes/mobile-header.html
@@ -2,7 +2,9 @@
     <a class="text-black nav-link d-block d-md-none" href="#" id="mobile-search" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center ps-2">
             <i class="fas fa-search"></i>
-            <p class="my-0">Search</p>
+            <p class="my-0">
+                Search
+            </p>
         </div>
     </a>
     <div class="dropdown-menu rounded-0 border-0 w-100 p-3 my-0" aria-labelledby="mobile-search">
@@ -29,16 +31,22 @@
     <a class="text-black nav-link d-block d-md-none" href="#" id="user-options" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <i class="fas fa-user"></i>
-            <p class="my-0">Account</p>
+            <p class="my-0">
+                Account
+            </p>
         </div>
     </a>
     <ul class="dropdown-menu" aria-labelledby="user-options">
         {% if request.user.is_authenticated %}
-            <li><a href="#" class="dropdown-item">My Profile</a></li>
-            <li><a href="#" class="dropdown-item">Sign Out</a></li>
+        {% if request.user.is_superuser %}
+            <li><a href="{% url 'admin:index' %}" class="dropdown-item">Admin</a></li>
+            <li><a href="#" class="dropdown-item">Product Management</a></li>
+        {% endif %}
+            <li><a href="{% url 'profile' user.profile.id %}" class="dropdown-item">My Profile</a></li>
+            <li><a href="{% url 'account_logout' %}" class="dropdown-item">Sign Out</a></li>
         {% else %}
-            <li><a href="#" class="dropdown-item">Sign In</a></li>
-            <li><a href="#" class="dropdown-item">Register</a></li>
+            <li><a href="{% url 'account_login' %}" class="dropdown-item">Sign In</a></li>
+            <li><a href="{% url 'account_signup' %}" class="dropdown-item">Register</a></li>
         {% endif %}
     </ul>
 </li>
