--- a/templates/base.html
+++ b/templates/base.html
@@ -182,9 +182,36 @@
             </div>
         </div>
     </footer>
+
+    {% if messages %}
+  <div class="message-container">
+    {% for message in messages %}
+      {% with message.level as level %}
+        {% if level == 40 %}
+          {% include 'includes/toasts/toast-error.html' %}
+        {% elif level == 30 %}
+          {% include 'includes/toasts/toast-warning.html' %}
+        {% elif level == 25 %}
+          {% include 'includes/toasts/toast-success.html' %}
+        {% else %}
+          {% include 'includes/toasts/toast-info.html' %}
+        {% endif %}
+      {% endwith %}
+    {% endfor %}
+  </div>
+  {% endif %}
+  
 </body>
 
 {% block postloadjs %}
+
+<script type="text/javascript">
+    const toasElList = $('.toast');
+    for(let toastEl of toasElList){
+        const toast = new bootstrap.Toast(toastEl);
+        toast.show();
+    }
+  </script>
 
 {% endblock %}
 
