feat: Add products app and add some comments to code

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -16,6 +16,7 @@ My Profile
     <h2 class="fw-bold">{{ profile.user }}'s Profile</h2>
 </div>
 <div class="row">
+    <!-- Delivery Information -->
     <div class="col-lg-6 col-md-12 pb-3">
         <h3 class="text-muted">Delivery Information</h3>
         <p class="text-muted">This is your default delivery Information.</p>
@@ -25,6 +26,7 @@ My Profile
             <button class="btn btn-primary" type="submit">Update Information</button>
         </form>
     </div>
+    <!-- Order History -->
     <div class="col-lg-6 col-md-12">
         <h3 class="text-muted">Order History</h3>
         <p class="text-muted">This is a list of your past orders.</p>
