--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -13,7 +13,7 @@ Welcome!
 <!-- Banner image -->
 <div class="row">
     <div class="col-12 text-center">
-        <a href="#"><img src="../../../media/home-splash-img.png" class="welcome-img" alt=""></a>
+        <a href="#"><img src="../../../media/home-splash-img.png" class="welcome-img" alt="Shop the latest tech deals with A to PC"></a>
     </div>
 </div>
 <!-- New Products -->
